# healthguard-model-api

./: .env.example  .gitignore  API_OUTPUT_SPEC.md  README.md  READSHAP.md  pyproject.toml  requirements.txt
.cursor/plans/: backend_api_3.12_joblib_3d54772a.plan.md
.windsurf/: repo-context.md
.windsurf/rules/: 11-cross-repo-topology.md
app/: __init__.py  config.py  dependencies.py  main.py
app/routers/: fall.py  health.py  sleep.py  system.py
app/schemas/: __init__.py  common.py  fall.py  health.py  sleep.py
app/services/: __init__.py  fall_featurize.py  fall_service.py  gemini_explainer.py  health_service.py  prediction_contract.py  sklearn_sleep_pickle_compat.py  sleep_features.py  sleep_service.py
data/datasets/: fall_detection_v1.csv  fall_detection_v2.csv  human_vital_signs_dataset_2024_v1.csv  human_vital_signs_dataset_2024_v2.csv  smartwatch_sleep_dataset_v1.csv  smartwatch_sleep_dataset_v2.csv
data/runtime/: BATCH_PREDICT_SAMPLES.txt
docs/: API_REFERENCE.md
models/Sleep/: sleep_score_bundle.joblib  sleep_score_metadata.json  sleep_score_preprocessor.joblib
models/fall/: fall_best_model.onnx  fall_bundle.joblib  fall_detection_mobile.tflite  fall_detection_model.keras  fall_metadata.json  fall_model.onnx  fall_preprocessor.joblib  scaler.pkl
scripts/: build_fall_sample_cases.py  build_health_sample_cases.py  build_predict_batch_samples.py  build_runtime_samples.py  build_sleep_sample_cases.py  inspect_modelok.py  write_per_case_json.py
tests/: conftest.py  test_internal_secret.py  test_xr003_range_validators.py
(+51 files in other folders)
